route from body now routes primitive types